@@ -52,8 +52,8 @@ public class EnergySkateParkBasicsModule extends AbstractEnergySkateParkModule {
 
     private final ArrayList<VoidFunction0> resetListeners = new ArrayList<VoidFunction0>();
 
-    public EnergySkateParkBasicsModule( String name, final PhetFrame phetFrame, boolean splinesMovable ) {
-        super( name, phetFrame, new EnergySkateParkOptions(), splinesMovable, false );
+    public EnergySkateParkBasicsModule( String name, final PhetFrame phetFrame, boolean splinesMovable, double floorFriction ) {
+        super( name, phetFrame, new EnergySkateParkOptions(), splinesMovable, false, floorFriction );
 
         //Don't allow users to apply rocket force with the keyboard
         energySkateParkSimulationPanel.setThrustEnabled( false );
