@@ -6,21 +6,20 @@ import java.io.Serializable;
 import edu.colorado.phet.common.phetcommon.math.SerializablePoint2D;
 import edu.colorado.phet.common.spline.ParametricFunction2D;
 
-/**
- * User: Sam Reid
- * Date: Sep 21, 2005
- * Time: 3:05:30 AM
- */
-
 public class Floor implements Serializable {
     private double y;
+    private final double friction;
 
-    public Floor() {
-        this( 0.0 );
+    //Friction is disabled in basics tab 1, but in other tabs it uses this value
+    public static final double DEFAULT_FRICTION = 0.02;
+
+    public Floor( double friction ) {
+        this( 0.0, friction );
     }
 
-    public Floor( double y ) {
+    public Floor( double y, double friction ) {
         this.y = y;
+        this.friction = friction;
     }
 
     public double getY() {
@@ -32,6 +31,6 @@ public class Floor implements Serializable {
     }
 
     public ParametricFunction2D getParametricFunction2D() {
-        return new LinearFloorSpline2D( new SerializablePoint2D[] { new SerializablePoint2D( -100, y ), new SerializablePoint2D( 200, y ) } );
+        return new LinearFloorSpline2D( new SerializablePoint2D[] { new SerializablePoint2D( -100, y ), new SerializablePoint2D( 200, y ) }, friction );
     }
 }
